# n-puzzle

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  build.bash  compile.sh
resources/: lol  pop  quuattre2  quuattre3
resources/puzzles/: quattre  test
scripts/: install-boost.bash  install-sfml.bash
src/: CommandLine.class.cpp  CommandLine.class.hpp  Gui.class.cpp  Gui.class.hpp  Heuristic.class.cpp  Heuristic.class.hpp  Parser.class.cpp  Parser.class.hpp  PathFinding.class.cpp  PathFinding.class.hpp  cat-args.template.hpp  gui.cpp  main.cpp  main.hpp  parser.cpp  utils.hpp  utils.tpp
src/class/: Array.class.hpp  Array.class.tpp  Puzzle.class.cpp  Puzzle.class.hpp  Puzzle.cpp  Puzzle.hpp  PuzzlePriorityQueue.class.cpp  PuzzlePriorityQueue.class.hpp  PuzzlePriorityQueue.class.tpp  PuzzlePriorityQueue.hpp
src/enum/: Heuristic.enum.hpp  Move.enum.hpp
src/exception/: Exception.class.cpp  Exception.class.hpp  Exception.cpp  Exception.hpp
src/struct/: FilePosition.struct.hpp  Options.struct.hpp  Position.hpp  Position.struct.cpp  Position.struct.hpp
tests/parsing/: parsing.bash
tests/parsing/files/: test01.puz  test02.puz  test03.puz  test04.puz  test05.puz  test06.puz  test07.puz  test08.puz  test09.puz  test10.puz  test11.puz  test12.puz  test13.puz  test14.puz  test15.puz
